# AIE6_Mideterm_Challenge

./: .gitignore  Dockerfile  RAGAS_LangSmith_Eval.ipynb  README.md  Session 11 Certification Challenge Report.docx  Writter_Report.md  app.py  app_copy.py  finetunning_embedding_model.ipynb  new_rag_tavily.ipynb  pyproject.toml  requirements.txt
