[project]
name = "11-midterm-challenge-sql-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "langchain-core==0.3.31",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-openai==0.3.1",
    "langchain-qdrant==0.2.0",
    "qdrant-client==1.13.2",
    "tiktoken>=0.8.0",
    "pymupdf==1.25.2",
    "langgraph==0.2.67",
    "langsmith==0.3.1",
    "openai==1.60.0",
    "cohere==5.13.11",
    "lxml==5.3.0",
    "jupyter==1.1.1",
    "bs4==0.0.2",
    "grandalf>=0.8",
    "pandas>=2.2.3",
    "pyppeteer>=2.0.0",
    "sqlalchemy>=1.4",
    "nltk==3.9.1",
    "wandb>=0.19.6",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "chainlit>=1.0.0",
    "tavily-python>=0.3.0",
    "pydantic>=2.6,<2.11",
    "streamlit==1.31.1",
    "sentence-transformers>=3.4.1",
    "transformers[torch]>=4.48.3",
    "langchain-huggingface>=0.1.2",
    "faiss-cpu>=1.10.0",
]
